_old/dinoco_docs/src/content/v0.0.1/de-de/orm/find-many.md
# find_many

Wird verwendet, um eine Liste von Datensätzen abzurufen.

---

## Was Sie tun können

- Eine Projektion mit `.select::&lt;T&gt;()` auswählen
- Mit `.cond(...)` filtern
- Mit `.take(...)` begrenzen
- Mit `.skip(...)` paginieren
- Mit `.order_by(...)` sortieren
- Beziehungen mit `.includes(...)` laden
- Beziehungen mit `.count(...)` zählen
- Lesen in der primären Datenbank mit `.read_in_primary()` erzwingen
- Mit `.execute(&client)` ausführen

## Methodenbeschreibung

- `.select::&lt;T&gt;()`: ersetzt die Standardprojektion des Modells durch eine benutzerdefinierte Projektion.
- `.cond(...)`: fügt Filterbedingungen zur Abfrage hinzu.
- `.take(...)`: begrenzt die Anzahl der zurückgegebenen Datensätze.
- `.skip(...)`: überspringt eine Anzahl von Datensätzen, bevor das Ergebnis zurückgegeben wird.
- `.order_by(...)`: definiert die Sortierung der Abfrage.
- `.includes(...)`: lädt Beziehungen zusammen mit den Hauptdatensätzen.
- `.count(...)`: berechnet Beziehungszähler und füllt Felder wie `posts_count` aus.
- `.read_in_primary()`: erzwingt das Lesen aus der primären Datenbank, ohne eine Replik zu verwenden.
- `.execute(&client)`: führt die Abfrage in der Datenbank aus.

## Rückgabe

Ohne `select::&lt;T&gt;()` ist die Rückgabe:

```rust
DinocoResult<Vec<M>>
```

Mit `select::&lt;T&gt;()` wird die Rückgabe zu:

```rust
DinocoResult<Vec<T>>
```

## Grundlegendes Beispiel

```rust
let users = dinoco::find_many::<User>()
    .execute(&client)
    .await?;
```

## Beispiel mit Filter

```rust
let users = dinoco::find_many::<User>()
    .cond(|w| w.email.eq("ana@acme.com"))
    .execute(&client)
    .await?;
```

## Beispiel mit Paginierung und Sortierung

```rust
let users = dinoco::find_many::<User>()
    .order_by(|w| w.name.asc())
    .skip(20)
    .take(10)
    .execute(&client)
    .await?;
```

## Beispiel für benutzerdefinierte Auswahl

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserListItem {
    id: i64,
    name: String,
}

let users = dinoco::find_many::<User>()
    .select::<UserListItem>()
    .execute(&client)
    .await?;
```

## Beispiel mit einfacher Einbindung

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserWithPosts {
    id: i64,
    name: String,
    posts: Vec<Post>,
}

let users = dinoco::find_many::<User>()
    .select::<UserWithPosts>()
    .includes(|i| i.posts())
    .execute(&client)
    .await?;
```

## Beispiel mit gefilterter Einbindung

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserWithPublishedPosts {
    id: i64,
    name: String,
    posts: Vec<Post>,
}

let users = dinoco::find_many::<User>()
    .select::<UserWithPublishedPosts>()
    .includes(|i| i.posts().cond(|w| w.published.eq(true)))
    .execute(&client)
    .await?;
```

## Beispiel mit verschachtelter Einbindung

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(Comment)]
struct CommentListItem {
    id: i64,
    text: String,
}

#[derive(Debug, Clone, dinoco::Extend)]
#[extend(Post)]
struct PostWithComments {
    id: i64,
    title: String,
    comments: Vec<CommentListItem>,
    comments_count: usize,
}

#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserWithPosts {
    id: i64,
    name: String,
    posts: Vec<PostWithComments>,
}

let users = dinoco::find_many::<User>()
    .select::<UserWithPosts>()
    .includes(|i| {
        i.posts()
            .includes(|post| post.comments().take(3))
            .count(|post| post.comments())
    })
    .execute(&client)
    .await?;
```

## Beispiel mit Beziehungszählung

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserWithPostsCount {
    id: i64,
    name: String,
    posts_count: usize,
}

let users = dinoco::find_many::<User>()
    .select::<UserWithPostsCount>()
    .count(|i| i.posts())
    .execute(&client)
    .await?;
```

## Beispiel für das Lesen aus der primären Datenbank

```rust
let users = dinoco::find_many::<User>()
    .read_in_primary()
    .take(5)
    .execute(&client)
    .await?;
```

## Nächste Schritte

- [**`find_first::&lt;M&gt;()`**](/v0.0.1/orm/find-first): Version zum Abrufen von maximal einem Datensatz.
- [**`count::&lt;M&gt;()`**](/v0.0.1/orm/count): Zählung von Datensätzen mit Filter.
